--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sports models by Eugenio & Sebastian"
+      content="Sports models by EggModels LLC"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>eggModels</title>
+    <title>EggModels</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
